--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,10 @@
     font-size: 0.8rem;
     text-decoration: none;
 }
+
+.ontop {
+    z-index: 10000000;
+    position: fixed;
+    left:15px;
+    top: 30%;
+}
